@@ -1,6 +1,6 @@
 /*
  * Copyright 2013-2014 SmartBear Software
- * Copyright 2014-2015 The TestFX Contributors
+ * Copyright 2014-2017 The TestFX Contributors
  *
  * Licensed under the EUPL, Version 1.1 or - as soon they will be approved by the
  * European Commission - subsequent versions of the EUPL (the "Licence"); You may
@@ -19,12 +19,61 @@ ext.moduleName = 'org.testfx.junit'
 
 dependencies {
     compile project(":testfx-core")
+    compile "junit:junit:4.12"
 
-    providedCompile "junit:junit:4.12"
-
-    testCompile "org.hamcrest:hamcrest-library:1.3"
     if (usingJava9) {
         testCompile "org.testfx:openjfx-monocle:jdk-9+181"
     } else {
         testCompile "org.testfx:openjfx-monocle:8u76-b04"
-    }}
+    }
+}
+
+sourceSets {
+    if (!usingJava9) {
+        main {
+            java {
+                exclude '**/module-info.java'
+            }
+        }
+    }
+}
+
+compileJava {
+    if (usingJava9) {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            options.compilerArgs = [
+                    '--module-path', classpath.asPath,
+            ]
+            classpath = files()
+        }
+
+        javadoc {
+            exclude "**/module-info.java"
+            options.addStringOption('-module-path', classpath.asPath)
+        }
+    }
+}
+
+compileTestJava {
+    if (usingJava9) {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            options.compilerArgs = [
+                    '--module-path', classpath.asPath,
+                    '--add-modules', 'junit',
+                    '--add-reads', "$moduleName=junit",
+                    '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+            ]
+            classpath = files()
+        }
+    }
+}
+
+jar {
+    inputs.property("moduleName", moduleName)
+
+    manifest {
+        attributes('Automatic-Module-Name': moduleName)
+    }
+}
