@@ -34,12 +34,62 @@ dependencies {
     // Removes compile warnings about missing enums.
     compile('org.apiguardian:apiguardian-api:1.0.0')
 
-    providedCompile 'org.junit.jupiter:junit-jupiter-api:5.1.0-M1'
+    compile 'org.junit.jupiter:junit-jupiter-api:5.1.0-M1'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.1.0-M1'
-    testCompile "org.hamcrest:hamcrest-library:1.3"
     if (usingJava9) {
         testCompile "org.testfx:openjfx-monocle:jdk-9+181"
     } else {
         testCompile "org.testfx:openjfx-monocle:8u76-b04"
+    }
+}
+
+sourceSets {
+    if (!usingJava9) {
+        main {
+            java {
+                exclude '**/module-info.java'
+            }
+        }
+    }
+}
+
+compileJava {
+    if (usingJava9) {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            options.compilerArgs = [
+                    '--module-path', classpath.asPath,
+            ]
+            classpath = files()
+        }
+
+        javadoc {
+            exclude "**/module-info.java"
+            options.addStringOption('-module-path', classpath.asPath)
+        }
+    }
+}
+
+compileTestJava {
+    if (usingJava9) {
+        inputs.property("moduleName", moduleName)
+        doFirst {
+            options.compilerArgs = [
+                    '--module-path', classpath.asPath,
+                    '--add-modules', 'org.junit.jupiter.api,javafx.controls',
+                    '--add-reads', "$moduleName=org.junit.jupiter.api",
+                    '--add-reads', "$moduleName=javafx.controls",
+                    '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+            ]
+            classpath = files()
+        }
+    }
+}
+
+jar {
+    inputs.property("moduleName", moduleName)
+
+    manifest {
+        attributes('Automatic-Module-Name': moduleName)
     }
 }
